fix readability

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -5,7 +5,7 @@ body {
 	font-family:"Roboto", Arial, sans-serif;
 	font-size:15px;
 	font-weight:300;
-	color:#141414;
+	color:#505050;
 	text-shadow: 0px 1px 1px #fff;
 	
 	background-color:#f0f0f0;
